--- a/backend/package.json
+++ b/backend/package.json
@@ -14,5 +14,10 @@
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "mongodb": "^6.20.0"
+
+    "scripts": {
+  "start": "node index.js"
+}
+
   }
 }
